--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="C5" version="2.5.3" targetFramework="net471" />
   <package id="OptimizedPriorityQueue" version="4.2.0" targetFramework="net471" />
   <package id="Troschuetz.Random" version="4.4.0" targetFramework="net471" />
 </packages>
